# how_to_debug_code

./: .gitignore
datarace/: CameraMoveController.h  Server.h
daterace/: CMakeLists.txt  CameraMoveController.cpp  CameraMoveController.h
daterace/qa_tests/: qa_test.py
deadlock/: CMakeLists.txt  CameraMoveController.cpp  CameraMoveController.h  Server.h
deadlock_2/: CameraMoveController.cpp  CameraMoveController.h  core_dump.sh  scan_build.sh
gdb_tests/: CameraMoveController.cpp  CameraMoveController.h  Server.h  cmake_clang.sh  main.cpp
gdb_tests/qa_tests/: qa_test.py
logging/: CMakeLists.txt  CameraMoveController.cpp
logging/qa_tests/: qa_test.py
memoryleak/: .Server.h.swp  CMakeLists.txt  CameraMoveController.h  Server.h  cmake_clang.sh  main.cpp
qa_tests/: CameraMoveController.h  Server.h  main.cpp
qa_tests/qa_tests/: qa_test.py
unit_tests/: CMakeLists.txt  CameraMoveController.cpp  CameraMoveController.h  CameraMoveControllerTests.cpp  main.cpp  scan_build.sh
